--- a/WuWaPlanner/WuWaPlanner.csproj
+++ b/WuWaPlanner/WuWaPlanner.csproj
@@ -35,6 +35,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Analyzers" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="8.0.6"/>
+		<PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
@@ -42,6 +43,7 @@
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
 		<PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0"/>
 		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1"/>
+		<PackageReference Include="StackExchange.Redis" Version="2.7.33"/>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"/>
 		<PackageReference Include="System.Runtime.Caching" Version="8.0.0"/>
 	</ItemGroup>
