--- a/WuWaPlanner/WuWaPlanner.csproj
+++ b/WuWaPlanner/WuWaPlanner.csproj
@@ -37,6 +37,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.Forms" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.DataProtection.StackExchangeRedis" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.6"/>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
 		<PackageReference Include="Serilog" Version="4.0.0"/>
@@ -45,6 +46,8 @@
 		<PackageReference Include="Serilog.Sinks.Console" Version="5.0.1"/>
 		<PackageReference Include="StackExchange.Redis" Version="2.7.33"/>
 		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"/>
+		<PackageReference Include="System.Linq.Async" Version="6.0.1"/>
+		<PackageReference Include="System.Linq.Async.Queryable" Version="6.0.1"/>
 		<PackageReference Include="System.Runtime.Caching" Version="8.0.0"/>
 	</ItemGroup>
 
