--- a/WuWaPlanner/WuWaPlanner.csproj
+++ b/WuWaPlanner/WuWaPlanner.csproj
@@ -14,6 +14,18 @@
 		<Content Include="..\Dockerfile">
 			<Link>Dockerfile</Link>
 		</Content>
+		<Content Include="bin\Data\characters\characters.info.csv"/>
+		<Content Include="bin\Localizations\items\items.leveling_resource.csv"/>
+		<Content Include="bin\Localizations\Resonators\Resonators.epic.csv"/>
+		<Content Include="bin\Localizations\Resonators\Resonators.legendary.csv"/>
+		<Content Include="bin\Localizations\items\items.character.csv"/>
+		<Content Include="bin\Localizations\items\items.exp.csv"/>
+		<Content Include="bin\Localizations\items\items.leveling_material.csv"/>
+		<Content Include="bin\Localizations\Weapons\Weapons.broadblade.csv"/>
+		<Content Include="bin\Localizations\Weapons\Weapons.gauntlets.csv"/>
+		<Content Include="bin\Localizations\Weapons\Weapons.pistols.csv"/>
+		<Content Include="bin\Localizations\Weapons\Weapons.rectifier.csv"/>
+		<Content Include="bin\Localizations\Weapons\Weapons.sword.csv"/>
 	</ItemGroup>
 
 	<ItemGroup>
@@ -23,6 +35,7 @@
 		<PackageReference Include="CacheManager.Serialization.Json" Version="1.2.0"/>
 		<PackageReference Include="CacheManager.StackExchange.Redis" Version="1.2.0"/>
 		<PackageReference Include="CacheManager.SystemRuntimeCaching" Version="1.2.0"/>
+		<PackageReference Include="CsvHelper" Version="32.0.3"/>
 		<PackageReference Include="Google.Apis" Version="1.68.0"/>
 		<PackageReference Include="Google.Apis.Auth" Version="1.68.0"/>
 		<PackageReference Include="Google.Apis.Auth.AspNetCore3" Version="1.68.0"/>
@@ -49,6 +62,44 @@
 		<PackageReference Include="System.Linq.Async" Version="6.0.1"/>
 		<PackageReference Include="System.Linq.Async.Queryable" Version="6.0.1"/>
 		<PackageReference Include="System.Runtime.Caching" Version="8.0.0"/>
+	</ItemGroup>
+
+	<ItemGroup>
+		<EmbeddedResource Update="Views\Home\Home.Ru.resx">
+			<Generator>ResXFileCodeGenerator</Generator>
+			<LastGenOutput>HomeController.En.Designer.cs</LastGenOutput>
+			<DependentUpon>Home.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Home\Home.resx">
+			<DependentUpon>Home.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Home\Home.Uk.resx">
+			<DependentUpon>Home.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\Pulls.resx">
+			<DependentUpon>Pulls.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\PullsImport.resx">
+			<DependentUpon>PullsImport.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Settings\Settings.resx">
+			<DependentUpon>Settings.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Shared\_Layout.resx">
+			<DependentUpon>_Layout.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\Pulls.Ru.resx">
+			<DependentUpon>Pulls.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\Pulls.Uk.resx">
+			<DependentUpon>Pulls.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\PullsImport.Ru.resx">
+			<DependentUpon>PullsImport.cshtml</DependentUpon>
+		</EmbeddedResource>
+		<EmbeddedResource Update="Views\Pulls\PullsImport.Uk.resx">
+			<DependentUpon>PullsImport.cshtml</DependentUpon>
+		</EmbeddedResource>
 	</ItemGroup>
 
 </Project>
