--- a/WuWaPlanner/WuWaPlanner.csproj
+++ b/WuWaPlanner/WuWaPlanner.csproj
@@ -70,25 +70,11 @@
 			<LastGenOutput>HomeController.En.Designer.cs</LastGenOutput>
 			<DependentUpon>Home.cshtml</DependentUpon>
 		</EmbeddedResource>
-		<EmbeddedResource Include="bin\Localizations\Views\Home\Home.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Home\Home.ru.resx">
+		<EmbeddedResource Update="Resources\Views\Home\Home.ru.resx">
 			<Generator>ResXFileCodeGenerator</Generator>
 			<LastGenOutput>HomeController.En.Designer.cs</LastGenOutput>
 			<DependentUpon>Home.cshtml</DependentUpon>
 		</EmbeddedResource>
-		<EmbeddedResource Include="bin\Localizations\Views\Home\Home.uk.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\PullsImport\PullsImport.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\PullsImport\PullsImport.Ru.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\PullsImport\PullsImport.Uk.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Pulls\Pulls.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Pulls\Pulls.ru.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Pulls\Pulls.uk.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Settings\Settings.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Settings\Settings.ru.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\Settings\Settings.uk.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\_Layout\_Layout.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\_Layout\_Layout.ru.resx"/>
-		<EmbeddedResource Include="bin\Localizations\Views\_Layout\_Layout.uk.resx"/>
 	</ItemGroup>
 
 	<ItemGroup>
