--- a/WuWaPlanner/WuWaPlanner.csproj
+++ b/WuWaPlanner/WuWaPlanner.csproj
@@ -66,6 +66,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6"/>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1"/>
+		<PackageReference Include="NCrontab" Version="3.3.3"/>
+		<PackageReference Include="NCrontab.Scheduler.AspNetCore" Version="1.2.10"/>
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
 		<PackageReference Include="Serilog" Version="4.0.0"/>
 		<PackageReference Include="Serilog.AspNetCore" Version="8.0.1"/>
